--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Danang Pradika Purnomo 
-logo: /assets/img/dna.jpg
+title: Bayu Agung Gilang Wibowo
+logo: /assets/img/bag.jpeg
 description: 
 show_downloads: true
 google_analytics:
