--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bayu Agung Gilang Wibowo
-logo: /assets/img/bag.jpeg
+logo: /assets/img/bag-01.jpeg
 description: 
 show_downloads: true
 google_analytics:
